--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,8 +3,12 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": [
+      "@types",
+      "node_modules/@types"
+    ]
   },
   "include": ["vite.config.ts"]
 }
